gas/testsuite/gas/m32r/outofrange.s
; Test error messages where branches are out of range.

; { dg-do assemble { target m32r-*-* } }

	.text
	.global foo
foo:
	bl.s label
		; { dg-error "out of range" "out of range bl.s" { target *-*-* } { 8 } }
	bnc.s label
		; { dg-error "out of range" "out of range bnc.s" { target *-*-* } { 10 } }
	bra.s label
		; { dg-error "out of range" "out of range bra.s" { target *-*-* } { 12 } }
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
	ld24 r0,#0
label:
	jmp r14
